Update flask todos

--- a/todo
+++ b/todo
@@ -1,22 +1,25 @@
 TODO:
-- Main page:
+- Main page: - Joe and Matic
     - Who is the app meant for
     - Brief explanation of the app
     - Embed youtube video
     - Prompt to Register and Login page
 
-- Login page
-- Register page
-After Login or register
+- Login page - Francie and Amanda
+- Register page - Francie and Amanda
 
-- Dashboard (just import)
-- User page (edit account):
+AFTER LOGIN OR REGISTER
+
+- Dashboard (just import) - Joe and Matic
+
+- User page (edit account): - Francie and Amanda
     - Change password
     - Change email
     - Change name
     - Upload picture
     - Change picture
-- Forum (post posts):
+
+- Forum (post posts): - Joe and Matic
     - Create a new post
     - Edit current post
     - Comment on a post
