Update flask todos

--- a/todo
+++ b/todo
@@ -28,3 +28,5 @@ AFTER LOGIN OR REGISTER
     - Delete post
     - Tagging (like reddit (to filter))
     - Filter posts (by tags)
+
+- Testing - Francie & Amanda
