--- a/todo
+++ b/todo
@@ -30,3 +30,15 @@ AFTER LOGIN OR REGISTER
     - Filter posts (by tags)
 
 - Testing - Francie & Amanda
+
+STUFF WE NEED
+•	HTML, CSS (Bootstrap or other third party library) and Jinja2
+•	Python using the Flask micro-framework
+•	Interaction with a SQL database (SQLite is preferred though MySQL or Postgresql are accepted)
+•	Has a responsive design. Responsive design means that it displays reasonably on devices of different dimensions such as mobile phone and laptop computer. This can be achieved using a 3rd party library such as Bootstrap.
+•	Allows your Dash app to be launched as a route in the web app.
+•	Provides signup/login/logout and restriction of some content to logged in users.
+•	Captures and stores data entered by users of the app.
+•	Uses and/or displays data stored in a SQLite database.
+•	TWO additional features: user profiles and forums
+
